Prevent overflow from happening on form container
Set the minimum width to 33% on the form container so this part never
overflows into another div. All other divs will shrink and so the
inputs always have a good spacing in between and are visible

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ img {
 }
 
 .formContainer {
-    height: 33%;
+    min-height: 33%;
     box-shadow: 0 10px 10px -10px rgb(150, 146, 146);
     position: relative;
     z-index: 1000;
